C_Projects/Neural/Code/utils.h

//////////////////////////////////////////////////// Data Structures //////////////////////////////////////////////////////////////

/*
Matrix data structure 
holds dimensional data
holds data as a pointer to a 1d double array
*/
typedef struct {
    double* data;
    int dim1;
    int dim2;
} matrix;
/*
Activation function enum structure
Enum to store what activation function is being used
*/
typedef enum {
    RELU,
    SOFTMAX,
    SIGMOID,
    TANH
} ActivationType;
/*
Optimization function enum structure
Enum to store what optimization function to use.
*/
typedef enum {
    SGD,
    SGD_MOMENTUM,
    ADA_GRAD,
    RMS_PROP,
    ADAM
}OptimizationType;
/*
Class label encoding enum structure
Enum to store what type of vector the class label is.
*/
typedef enum {
    ONE_HOT,
    SPARSE
} ClassLabelEncoding;